# liquidity-bot-v2

./: .clinerules  .gitignore  README.md  pyproject.toml
backtest/: __init__.py  config.py  harness.py  multipool.py  reporter.py  simulator.py  sweep.py
config/: default.yaml
core/: __init__.py  fees.py  il.py  metrics.py  models.py  units.py
data/: __init__.py
execution/: __init__.py  base_executor.py
memory/: activeContext.md  known_issues.md  manifest.json  pool_reference.md  pool_reference_raw.json  progress.md  projectBrief.md  systemPatterns.md  techContext.md
registry/: __init__.py  registry.json  registry.py  types.py
reporting/: __init__.py  comparator.py  display.py  run_index.py  run_report.py
results/: .gitkeep
scripts/: aero_extract.js  backtest.py  build_coin_id_map.py  build_pool_reference.py  check_coingecko_ids.py  check_data_files.py  check_geckoterminal.py  check_graph_endpoint.py  check_slot0.py  debug_slot0.py  fetch.py  fetch_aerodrome_pools.py  fetch_prices.py  fetch_token_history.py  full_scrape.js  populate_registry.py  run_backtest.py  run_backtest_legacy.py  run_pool_scan.py  scrape_aerodrome.js  scrape_aerodrome_all.py  scrape_aerodrome_playwright.py  scrape_page_pools.js  sweep.py
strategy/: __init__.py  evaluator.py  exit_signal.py  il_calculator.py  position.py  regime.py  scorer.py  signals.py  trend.py
tests/: __init__.py  conftest.py  coverage_map.md  test_backtest_harness.py  test_backtest_integration.py  test_comparator.py  test_data_integrity.py  test_data_layer.py  test_e2e_backtest.py  test_evaluator.py  (+18 more)
(+160 files in other folders)
